PCHR-567: Fix layout issue

--- a/scss/components/_page.scss
+++ b/scss/components/_page.scss
@@ -37,6 +37,7 @@
                 &:last-child {
                     float: none;
                     margin-left: $crm-page-sidebar-max-width;
+                    overflow: hidden;
                     width: auto;
                 }
             }
